--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+  "name": "app-plania-tests",
+  "version": "1.0.0",
+  "description": "Tests E2E pour App Plania",
+  "scripts": {
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run:headless": "cypress run --headless"
+  },
   "devDependencies": {
-    
     "cypress": "^15.3.0"
-
   }
 }
